--- a/core/templates/core/navbar.html
+++ b/core/templates/core/navbar.html
@@ -1,23 +1,26 @@
 {% load static %}
 <nav
-  class="sticky flex w-80 flex-col justify-between rounded-r-lg bg-color-primary p-5 text-slate-100"
+  class="sticky left-0 top-0 flex flex-col justify-between overflow-y-scroll rounded-r-lg bg-color-primary py-5 text-slate-100 transition-all"
+  x-data="{ open: true }"
+  :class="open ? 'w-80 px-5' : 'w-24 px-1'"
 >
   <div>
-    <header>
-      <div class="flex w-full items-start justify-between">
-        <div class="relative">
-          <img
-            src="{% static '/core/images/profile.jpg' %}"
-            alt="Imagem de {{ user.username.split.0.title }}"
-            class="mb-5 h-20 w-20 rounded-3xl shadow-md"
-          />
-          <span
-            class="absolute -right-3 -top-3 w-8 h-8 text-center rounded-2xl bg-gray-200 p-1 shadow"
-          >
-            🧡
-          </span>
-        </div>
-        <button class="transition-all duration-300 hover:text-color-secondary">
+    <header class="flex flex-col items-center">
+      <div
+        class="flex w-full items-start"
+        :class="open ? 'justify-between' : 'justify-center'"
+      >
+        <span
+          class="origin-left text-xl font-bold transition-all"
+          :class="open || 'hidden'"
+        >
+          {{ user.username.split.0.title }} {{ user.username.split.1.title }}
+        </span>
+        <button
+          class="transition-all duration-300 hover:text-color-secondary"
+          :class="open && 'rotate-180'"
+          @click="open = !open"
+        >
           <svg
             xmlns="http://www.w3.org/2000/svg"
             fill="none"
@@ -34,12 +37,23 @@
           </svg>
         </button>
       </div>
-      <span class="text-xl font-bold">
-        {{ user.username.split.0.title }} {{ user.username.split.1.title }}
-      </span>
+      <div class="relative mt-5 w-max" :class="open ? 'mr-32' : 'mr-0'">
+        <img
+          src="{% static '/core/images/profile.jpg' %}"
+          alt="Imagem de {{ user.username.split.0.title }}"
+          class="mb-5 shadow-md transition-all duration-200"
+          :class="open ? 'h-20 w-20 rounded-3xl' : 'h-14 w-14 rounded-2xl'"
+        />
+        <span
+          class="absolute -right-2 -top-2 flex h-8 w-8 items-center justify-center rounded-full bg-gray-200 text-center shadow"
+          :class="open || 'scale-0'"
+        >
+          💜
+        </span>
+      </div>
     </header>
-    <hr />
-    <ul class="flex flex-col gap-4">
+    <hr :class="open || 'scale-0'" />
+    <ul class="flex flex-col gap-4" :class="open || 'scale-0'">
       <li>
         <a href="">
           <svg
@@ -94,25 +108,45 @@
           <span>Boletim</span>
         </a>
       </li>
-      <li x-data="{ open: false }">
-        <a href="#" @click="open = !open">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            fill="none"
-            viewBox="0 0 24 24"
-            stroke-width="1.5"
-            stroke="currentColor"
-          >
-            <path
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              d="M6.75 3v2.25M17.25 3v2.25M3 18.75V7.5a2.25 2.25 0 012.25-2.25h13.5A2.25 2.25 0 0121 7.5v11.25m-18 0A2.25 2.25 0 005.25 21h13.5A2.25 2.25 0 0021 18.75m-18 0v-7.5A2.25 2.25 0 015.25 9h13.5A2.25 2.25 0 0121 11.25v7.5"
-            />
-          </svg>
-          <span>Calendário</span>
+      <li x-data="{ open: false }" @click="open = !open">
+        <a href="#" class="justify-between pr-3">
+          <div class="flex items-center gap-3">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M6.75 3v2.25M17.25 3v2.25M3 18.75V7.5a2.25 2.25 0 012.25-2.25h13.5A2.25 2.25 0 0121 7.5v11.25m-18 0A2.25 2.25 0 005.25 21h13.5A2.25 2.25 0 0021 18.75m-18 0v-7.5A2.25 2.25 0 015.25 9h13.5A2.25 2.25 0 0121 11.25v7.5"
+              />
+            </svg>
+            <span>Calendário</span>
+          </div>
+          <button>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
+              class="h-6 w-6"
+              :class="open && 'rotate-180'"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M12 4.5v15m0 0l6.75-6.75M12 19.5l-6.75-6.75"
+              />
+            </svg>
+          </button>
         </a>
         <ul
           class="my-2 ml-3 flex origin-top flex-col gap-4 border-l-[3px] border-l-color-primary-dimm py-2 pl-2 transition duration-500"
+          :class="open || 'hidden'"
         >
           <li>
             <a href="">
@@ -194,7 +228,7 @@
     </ul>
   </div>
 
-  <div>
+  <div :class="open || 'scale-0'">
     <hr />
     <ul class="flex flex-col gap-2">
       <li>
