--- a/communication/templates/communication/alert/list.html
+++ b/communication/templates/communication/alert/list.html
@@ -5,14 +5,12 @@
     Alpine.data("alert", () => ({
       seeDialog: false,
       imgUrl: "",
-      title: "",
       info: "",
       date: "",
 
       fillIn(el) {
         this.seeDialog = true;
         this.imgUrl = el.querySelector("#img").textContent.trim();
-        this.title = el.querySelector("#title").textContent.trim();
         this.info = el.querySelector("#description").textContent.trim();
         this.date = el.querySelector("#date").textContent.trim();
       },
@@ -24,6 +22,7 @@
   <h1 class="mb-3 font-sans text-3xl font-bold text-color-primary">
     Alertas
   </h1>
+
   <section class="mt-10 grid grid-cols-2 gap-10 divide-gray-600" x-data="alert">
     <ul class="flex flex-col gap-5">
       {% for alert in alerts %}
@@ -31,9 +30,8 @@
         class="rounded-lg border-2 border-slate-600 bg-color-bg-perfil p-5"
         @click="fillIn($el)"
       >
-        <h2 id="title">{{ alert.title }}</h2>
         <h3 class="text-slate-500">
-          por {{ alert.emiter }} |
+          ({{ alert.tag }}) por {{ alert.emiter }} |
           <span id="date">{{ alert.date|date:'d/m/Y' }}</span>
         </h3>
         <p id="description" class="hidden">{{ alert.description }}</p>
@@ -41,10 +39,10 @@
       </li>
       {% endfor %}
     </ul>
+
     <article>
-      <h2 x-text="title" class="font-semibold text-color-primary"></h2>
-      <img :src="imgUrl" alt="imagem do alerta">
       <p x-text="info"></p>
+      <img :src="imgUrl" alt="imagem do alerta">
     </article>
   </section>
 </main>
