--- a/core/templates/core/navbar.html
+++ b/core/templates/core/navbar.html
@@ -22,6 +22,22 @@
     <ul class="flex flex-col gap-4" :class="open || 'scale-0'">
       <li>
         <a href="{% url 'dashboard' %}">
+          {% if user|has_role:'admin' %}
+          <svg
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke-width="1.5"
+          stroke="currentColor"
+          >
+          <path
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          d="M12 7.5h1.5m-1.5 3h1.5m-7.5 3h7.5m-7.5 3h7.5m3-9h3.375c.621 0 1.125.504 1.125 1.125V18a2.25 2.25 0 01-2.25 2.25M16.5 7.5V18a2.25 2.25 0 002.25 2.25M16.5 7.5V4.875c0-.621-.504-1.125-1.125-1.125H4.125C3.504 3.75 3 4.254 3 4.875V18a2.25 2.25 0 002.25 2.25h13.5M6 7.5h3v3H6v-3z"
+          />
+        </svg>
+          <span>Dashboard</span>
+          {% else %}
           <svg
             xmlns="http://www.w3.org/2000/svg"
             fill="none"
@@ -36,32 +52,15 @@
             />
           </svg>
           <span>Home</span>
-        </a>
-      </li>
-      <li>
-        <a href="{% url 'dashboard' %}">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            fill="none"
-            viewBox="0 0 24 24"
-            stroke-width="1.5"
-            stroke="currentColor"
-          >
-            <path
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              d="M12 7.5h1.5m-1.5 3h1.5m-7.5 3h7.5m-7.5 3h7.5m3-9h3.375c.621 0 1.125.504 1.125 1.125V18a2.25 2.25 0 01-2.25 2.25M16.5 7.5V18a2.25 2.25 0 002.25 2.25M16.5 7.5V4.875c0-.621-.504-1.125-1.125-1.125H4.125C3.504 3.75 3 4.254 3 4.875V18a2.25 2.25 0 002.25 2.25h13.5M6 7.5h3v3H6v-3z"
-            />
-          </svg>
-          <span>Dashboard</span>
+          {% endif %}
         </a>
       </li>
       <li>
         <a href="{% url 'courses' %}">
           <svg
-            xmlns="http://www.w3.org/2000/svg"
-            fill="none"
-            viewBox="0 0 24 24"
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none"
+          viewBox="0 0 24 24"
             stroke-width="1.5"
             stroke="currentColor"
             class="h-6 w-6"
