--- a/communication/templates/communication/alert/list.html
+++ b/communication/templates/communication/alert/list.html
@@ -1,4 +1,4 @@
-{% extends 'core/base.html' %} {% block head %}
+{% extends 'core/base.html' %} {% load permission_tags %} {% block head %}
 <title>Alertas</title>
 <script>
   document.addEventListener("alpine:init", () => {
@@ -18,32 +18,86 @@
   });
 </script>
 {% endblock %} {% block content %}
-<main class="flex-1 p-5">
-  <h1 class="mb-3 font-sans text-3xl font-bold text-color-primary">
-    Alertas
-  </h1>
+<main class="md:mx-16 flex-1 p-5">
+  <h1 class="mb-3 font-sans text-3xl font-bold text-color-primary">Alertas</h1>
 
-  <section class="mt-10 grid grid-cols-2 gap-10 divide-gray-600" x-data="alert">
+  <section class="mt-10 divide-gray-600" x-data="alert">
     <ul class="flex flex-col gap-5">
       {% for alert in alerts %}
-      <li
-        class="rounded-lg border-2 border-slate-600 bg-color-bg-perfil p-5"
-        @click="fillIn($el)"
+      <div
+        class="rounded-2xl bg-gray-100 shadow"
+        x-data="{ options: false, details: false }"
       >
-        <h3 class="text-slate-500">
-          ({{ alert.tag }}) por {{ alert.emiter }} |
-          <span id="date">{{ alert.date|date:'d/m/Y' }}</span>
-        </h3>
-        <p id="description" class="hidden">{{ alert.description }}</p>
-        <span id="img" class="hidden">{% url 'img' 'alerts' 0 %}</span>
-      </li>
+        <header class="flex justify-between px-6 py-4">
+          <div>
+            <h2 class="font-semibold text-color-primary">
+              {{ alert.emiter }} {% if alert.emiter|has_role:'student' %} - {{ alert.emiter.profile.classroom }} {% endif %}
+            </h2>
+            <p>
+              <span>{{ alert.tag }}</span>
+              <span>{{ alert.date }}</span>
+            </p>
+            <p>{{ alert.description }}</p>
+          </div>
+          <div class="relative">
+            <button @click="details = !details">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke-width="1.5"
+                stroke="currentColor"
+                class="h-6 w-6 transition-transform"
+                :class="details && 'rotate-180'"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="M19.5 8.25l-7.5 7.5-7.5-7.5"
+                />
+              </svg>
+            </button>
+          </div>
+        </header>
+        <div
+          class="origin-top rounded-b-2xl bg-gray-200 p-5 transition-all"
+          :class="details || 'scale-y-0 h-0 py-0'"
+        >
+          <form action="">
+            <div class="flex flex-col gap-8 md:flex-row md:pr-16">
+              <div class="flex flex-1 flex-col gap-1">
+                <label for="txt-res">Resposta:</label>
+                <input type="text" name="" id="" />
+              </div>
+              <div>
+                <div>
+                  <input type="radio" name="" id="" /><label for=""
+                    >Solucionada</label
+                  >
+                </div>
+                <div>
+                  <input type="radio" name="" id="" /><label for=""
+                    >Solucionando</label
+                  >
+                </div>
+                <div>
+                  <input type="radio" name="" id="" /><label for=""
+                    >Sem solução</label
+                  >
+                </div>
+              </div>
+            </div>
+            <button type="submit" class="m-auto mt-3 block">Enviar</button>
+          </form>
+        </div>
+      </div>
       {% endfor %}
     </ul>
 
-    <article>
+    <!-- <article>
       <p x-text="info"></p>
-      <img :src="imgUrl" alt="imagem do alerta">
-    </article>
+      <img :src="imgUrl" alt="imagem do alerta" />
+    </article> -->
   </section>
 </main>
 {% endblock %}
